Modificaciones a la interfaz

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,12 +2,13 @@
 <mat-toolbar>
   Colegio Winterfell
   <div class='col-md-2' style="margin-left: 60%;">Filtrar por: <input type='text'></div>
+  <img ng-click="D:\Colegio-Winterfell-1.0-master\frontend\HouseStark"> 
 </mat-toolbar>
 <mat-toolbar>
   <div>
     <h1>
         <mat-toolbar>
-            <button mat-button routerLink="/subjects">Materias</button>
+            <button mat-raised-button routerLink="/subjects">Materias</button>
         </mat-toolbar>
     </h1>
   </div>
