Comentarios de código para consultar tareas

--- a/frontend/src/app/dialog-overview-example-dialog.html
+++ b/frontend/src/app/dialog-overview-example-dialog.html
@@ -1,3 +1,7 @@
+<!--Esta componente nos va a permitir ver las características que tiene una tarea, las características son
+Nombre, descripción, Link de apoyo, Archivo de apoyo, fecha de entrega de la tarea y estado de la tarea
+Además de un botón para guardar-->
+
 <mat-list role="list">
     <mat-list-item role ="listitem">Nombre: {{data.task.taskName}}</mat-list-item>
     <mat-list-item role ="listitem">Descripcion: {{data.task.description}}</mat-list-item>
