--- a/frontend/src/app/taskFeature.component.html
+++ b/frontend/src/app/taskFeature.component.html
@@ -2,6 +2,7 @@
     <li>
       <mat-form-field>
         <mat-list>
+          <!--Este for nos va a permitir ver la lista de tareas que se encuentran en la base de datos-->
             <div *ngFor = "let task of apiService.subject.tasks" >
                 <mat-card style=" cursor: pointer" >
                     {{task.taskName}} ,
