--- a/frontend/src/app/dialog-overview-example-dialog.html
+++ b/frontend/src/app/dialog-overview-example-dialog.html
@@ -1,16 +1,14 @@
 <!--Esta componente nos va a permitir ver las características que tiene una tarea, las características son
 Nombre, descripción, Link de apoyo, Archivo de apoyo, fecha de entrega de la tarea y estado de la tarea
 Además de un botón para guardar-->
-
 <mat-list role="list">
     <mat-list-item role ="listitem">Nombre: {{data.task.taskName}}</mat-list-item>
-    <mat-list-item role ="listitem">Descripcion: {{data.task.description}}</mat-list-item>
+    <mat-list-item role ="listitem">Descripción: {{data.task.description}}</mat-list-item>
     <mat-list-item role ="listitem | linky">Link de apoyo: 
       <a href> 
         {{data.task.archivo}} 
       </a>
     </mat-list-item>
-    
     <mat-form-field>
       <input matInput [matDatepicker]="picker" value={{data.task.date}} placeholder disabled="Ver fecha">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -19,9 +17,8 @@ Además de un botón para guardar-->
   <section class="example-section">
     <mat-checkbox class="example-margin" [(ngModel)]="data.task.Completada">Terminada</mat-checkbox>
   </section>  
-</mat-list>
+</mat-list>  
 
-  
 
 <div mat-dialog-actions>
     <button mat-button [mat-dialog-close]="data.task" cdkFocusInitial>Guardar</button>
