Modificaciones para acceder a materias y tareas, estando el grado y el curso con mas jerarquía en la base de datos

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,9 +8,11 @@
   <div>
     <h1>
         <mat-toolbar>
-            <button mat-raised-button routerLink="/subjects">Materias</button>
+            <button mat-raised-button routerLink="/subjects">Materias</button> 
+            <button mat-raised-button  routerLink="/subjects" style="margin-left: 20%;">Tareas</button>
         </mat-toolbar>
     </h1>
+   
   </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
