comentarios caso de uso agregar tarea

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,7 +9,7 @@
     <h1>
         <mat-toolbar>
             <button mat-raised-button routerLink="/subjects">Materias</button> 
-            <button mat-raised-button  routerLink="/subjects" style="margin-left: 20%;">Tareas</button>
+            <button mat-raised-button  routerLink="/grades" style="margin-left: 20%;">Tareas</button>
         </mat-toolbar>
     </h1>
    
