Refactorización, comentar y eliminar clases

--- a/frontend/src/app/feature.component.html
+++ b/frontend/src/app/feature.component.html
@@ -1,3 +1,4 @@
+<!-- Interfaaz con modal para mostrar las tareas de las materias-->
 <mat-toolbar color ="primary">
     <mat-card-header>
         <mat-card-title>
