--- a/frontend/src/app/thetask.component.html
+++ b/frontend/src/app/thetask.component.html
@@ -8,7 +8,7 @@
     </mat-card-header>
 </mat-toolbar>
 
-
+<!-- Esta interfaz nos muestra cada campo para agregar una tarea con su boton de agregar -->
 <div class="example-container">
     <form>
         <mat-card>
