--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!--Interfaz para mostrar los botones de la aplicación.-->
 <mat-toolbar>
   Colegio Winterfell
   <div class='col-md-2' style="margin-left: 60%;">Filtrar por: <input type='text'></div>
